# custom-voice-agent

./: README.md  main.py  pyproject.toml
backend/: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e47472a12911_change_metadata_to_jsonb.py  e6613535abd2_setup_vector_schema.py  e9c2f68eed9c_enable_pgvector_extension.py
backend/core/: agent.py  config.py  factory.py  knowledge.py  prompts.py
backend/core/database/: models.py
backend/core/tools/: info_tools.py  kb_tool.py
backend/data/: user_agent.db
backend/data/faiss_index/: index.faiss  index.pkl
core/: agent.py  config.py  knowledge.py
frontend/app/: globals.css  layout.tsx  page.tsx
