[project]
name = "custom-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "kokoro-onnx>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "pyaudio",
    "sentence-transformers>=5.3.0",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
