[project]
name = "custom-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "alembic>=1.18.4",
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "kokoro-onnx>=0.5.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pyaudio",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.3.0",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.48",
    "supabase==2.28.3",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
